--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "private": true,
   "scripts": {
-    "test": "eslint src/js"
+    "test": "eslint src/js",
+    "dev": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=./webpack.config.js",
+    "watch": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=./webpack.config.js",
+    "production": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=./webpack.config.js"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "babel-eslint": "7.*",
-    "babel-preset-es2015": "6.*",
-    "gulp": "^3.9.0",
-    "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-webpack-official": "^1.0.10"
+    "bulma": "^0.3.1",
+    "laravel-echo": "^1.2.4",
+    "laravel-mix": "^0.7.4",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
+    "socket.io-client": "^1.7.2",
+    "vue": "^2.1.10",
+    "vue-infinite-loading": "^2.0.0"
   }
 }
