--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "test": "eslint src/js",
     "dev": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=./webpack.config.js",
     "watch": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=./webpack.config.js",
-    "production": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=./webpack.config.js"
+    "production": "node node_modules/cross-env/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=./webpack.config.js",
+    "chrome": "npm run production -- --env.browser=chrome",
+    "firefox": "npm run production -- --env.browser=firefox",
+    "chrome-staging": "npm run production -- --env.browser=chrome --env.envfile=.env.staging",
+    "firefox-staging": "npm run production -- --env.browser=firefox --env.envfile=.env.staging"
   },
   "devDependencies": {
     "axios": "^0.15.3",
