--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ EXTENSION_ENV=production
 EXTENSION_ROOT_URL=https://viblo.asia
 EXTENSION_ECHO_URL=https://viblo.asia:6001
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
+
+STORE_PAGE_CHROME=https://chrome.google.com/webstore/detail/viblos-news-feed/mliahmjgdpkkicelofhbhgiidgljijmj
+STORE_PAGE_FIREFOX=
