--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 EXTENSION_ENV=production
 EXTENSION_ROOT_URL=https://viblo.asia
+EXTENSION_API_URL=https://api.viblo.asia
 EXTENSION_ECHO_URL=https://viblo.asia:6001
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
 
