--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "axios": "^0.15.3",
     "babel-eslint": "7.*",
+    "babel-preset-vue": "^1.0.2",
     "bulma": "^0.3.1",
     "deep-assign": "^2.0.0",
     "dotenv": "^4.0.0",
