--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,8 @@
 EXTENSION_ENV=production
-EXTENSION_ROOT_URL=http://stg.viblo.asia
-EXTENSION_ECHO_URL=http://stg.viblo.asia:6001
+EXTENSION_ROOT_URL=https://stg1.viblo.asia
+EXTENSION_API_URL=https://api-stg1.viblo.asia
+EXTENSION_ECHO_URL=https://stg1.viblo.asia:6001
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
+
+STORE_PAGE_CHROME=
+STORE_PAGE_FIREFOX=
