--- a/assets/manifest.template.json
+++ b/assets/manifest.template.json
@@ -9,7 +9,7 @@
     "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "browser_action": {
         "default_icon": "images/icon64.png",
-        "default_popup": "html/popup.html"
+        "default_popup": "popup/popup.html"
     },
     "permissions": [
         "tabs",
@@ -24,7 +24,7 @@
         "64": "images/icon64.png"
     },
     "background": {
-        "scripts": ["js/extensions/background.js"]
+        "scripts": ["background.js"]
     },
     "homepage_url": "https://viblo.asia"
 }
