--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "lint": "eslint src/js",
+    "lint": "eslint src",
     "clean": "rimraf build",
     "dev": "cross-env NODE_ENV=development webpack --watch --hide-modules",
     "build": "yarn clean && cross-env NODE_ENV=development webpack --hide-modules",
@@ -16,8 +16,7 @@
     "archiver": "^2.1.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-vue": "^2.0.1",
+    "babel-preset-vue-app": "^2.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
@@ -27,10 +26,11 @@
     "eslint-import-resolver-webpack": "^0.8.4",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-vue": "^4.3.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "fs-extra": "^5.0.0",
     "html-webpack-plugin": "^3.0.6",
-    "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.7.2",
     "progress-bar-webpack-plugin": "^1.11.0",
     "rimraf": "^2.6.2",
@@ -43,11 +43,11 @@
     "yargs": "^11.0.0"
   },
   "dependencies": {
-    "bulma": "^0.6.2",
+    "element-ui": "^2.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "socket.io-client": "^2.0.4",
-    "viblo-sdk": "https://github.com/viblo-asia/sdk-js#4864660",
+    "viblo-sdk": "https://github.com/viblo-asia/sdk-js#558b4b0",
     "vue": "^2.5.14",
     "vue-infinite-loading": "^2.2.3",
     "vuex": "^3.0.1"
