--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
-EXTENSION_ROOT_URL=http://viblo.test:8001
-EXTENSION_API_URL=http://api.viblo.test:8001
-EXTENSION_ECHO_URL=http://viblo.test:6001
+ALLOW_ORIGIN=https://*.viblo.asia/
+EXTENSION_ROOT_URL=https://viblo.asia
+EXTENSION_API_URL=https://api.viblo.asia
+EXTENSION_ECHO_URL=https://viblo.asia:6001
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
 
 STORE_PAGE_CHROME=https://chrome.google.com/webstore/detail/viblos-news-feed/mliahmjgdpkkicelofhbhgiidgljijmj
