--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
+ALLOW_ORIGIN=https://*.viblo.asia/
 EXTENSION_ROOT_URL=https://stg1.viblo.asia
 EXTENSION_API_URL=https://api-stg1.viblo.asia
 EXTENSION_ECHO_URL=https://stg1.viblo.asia:6001
