--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
+    "dotenv": "^5.0.1",
     "dotenv-webpack": "^1.5.5",
     "eslint": "^4.18.2",
     "eslint-config-airbnb-base": "^12.1.0",
