Fix: Display avatar issue

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ ALLOW_ORIGIN=
 EXTENSION_ROOT_URL=
 EXTENSION_API_URL=
 EXTENSION_ECHO_URL=
+IMAGES_URL=
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
 
 STORE_PAGE_CHROME=https://chrome.google.com/webstore/detail/viblos-news-feed/mliahmjgdpkkicelofhbhgiidgljijmj
