--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,7 @@ EXTENSION_ROOT_URL=https://viblo.asia
 EXTENSION_API_URL=https://api.viblo.asia
 EXTENSION_ECHO_URL=https://viblo.asia:6001
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
+IMAGES_URL=https://images.viblo.asia
 
 STORE_PAGE_CHROME=https://chrome.google.com/webstore/detail/viblos-news-feed/mliahmjgdpkkicelofhbhgiidgljijmj
 STORE_PAGE_FIREFOX=
