--- a/.env.staging
+++ b/.env.staging
@@ -1,8 +1,9 @@
 ALLOW_ORIGIN=https://*.viblo.asia/
-EXTENSION_ROOT_URL=https://stg1.viblo.asia
-EXTENSION_API_URL=https://api-stg1.viblo.asia
-EXTENSION_ECHO_URL=https://stg1.viblo.asia:6001
+EXTENSION_ROOT_URL=https://stg.viblo.asia
+EXTENSION_API_URL=https://api.stg.viblo.asia
+EXTENSION_ECHO_URL=https://stg.viblo.asia:6001
 EXTENSION_GOOGLE_ANALYTICS_ID=UA-00000000-0
+IMAGES_URL=https://images.stg.viblo.asia
 
 STORE_PAGE_CHROME=
 STORE_PAGE_FIREFOX=
